tests/fixtures/invalid/pow_bool_bytes.py
# Cannot call pow() with Bool, Bytes
x = pow(True, b"hello")
